examples/negative/pub_effect/pub_fn_unit_leak_stdout.kai
# Negative fixture (#511 / pub-effect contract): a `pub fn`
# returning `Unit` with no declared row writes via `print`. The
# typer must reject — `Stdout` is a real effect even when the
# return type is `Unit`.

pub fn shout(s: String) : Unit = {
  print(s)
  ()
}

fn main() : Unit / Console = shout("hi")
